Update and rename test to test.html

--- a/test.html
+++ b/test.html
@@ -34,7 +34,7 @@
       <section>
       <img src="your_picture_link_here" height="400" width="525" alt="Guojing Li">
       <p>I am currently a Ph.D. candidate in Human Resource Management at Renmin University of China, and a visiting scholar at Scott Business School, Indiana State University.</p>
-      <p>My research interests include multi-modeling measurement of Individual difference(such as  Personality measurement by social media,AI chat measure competence and other multi-behavior and multi-task measurement) and other applications of machine learning and big data in Social Science.</p>
+      <p>My research interests include multi-modeling measurement of Individual differences (such as  Personality measurement by social media, AI chat measure competence and other multi-behavior and multi-task measurement) and other applications of machine learning and big data in Social Science.</p>
       </section>
 
       <!-- Professional Experience Section -->
@@ -43,7 +43,7 @@
         <p>
           <b>Renmin University of China</b><br>
           Ph.D. candidate in Human Resource Management (2019-Present)<br>
-          My primary focus is on multi-modeling measurement of individual differences.
+          My primary focus is on the multi-modeling measurement of individual differences.
         </p>
         <p>
           <b>Scott Business School, Indiana State University</b><br>
