--- a/index.html
+++ b/index.html
@@ -1,64 +1,55 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
+  <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Guojing Li's website</title>
+    <title>Guojing Li's Website</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
-    <!-- Add your Google Analytics and other tracking scripts here -->
-
     <style>
-      /* Add your custom CSS styles here */
+      /* Your style codes... */
     </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Guojing Li  李国静</h1>
-        <p>Ph.D. candidate in Human Resource Management<br>Renmin University of China / Visiting Scholar at Scott Business School, Indiana State University</p>
+        <h1>Guojing Li 李国静</h1>
+        <p>Ph.D. Candidate in Human Resource Management / Data Science<br>RUC / Indiana State University</p>
         <p>Email:<br>alfredjameslee@ruc.edu.cn</p>
-        <h3><a href="https://github.com/alfredjameslee">Home</a></h3>
-        <h3><a href="https://github.com/alfredjameslee/research.html">Research</a></h3> 
-        <b>Social</b><br>
+    <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:alfredjameslee@ruc.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="http://github.com/alfredjameslee"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="http://github.com/GuojingLi"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
         </div>
         <br>
+        <img src="李国静-个人照片.jpg" height="400" width="525" alt="Guojing Li">
+        <p><small>Hosted on GitHub Pages</small></p>
       </header>
       <section>
-      <img src="your_picture_link_here" height="400" width="525" alt="Guojing Li">
-      <p>I am currently a Ph.D. candidate in Human Resource Management at Renmin University of China, and a visiting scholar at Scott Business School, Indiana State University.</p>
-      <p>My research interests include multi-modeling measurement of Individual differences (such as  Personality measurement by social media, AI chat measure competence and other multi-behavior and multi-task measurement) and other applications of machine learning and big data in Social Science.</p>
-      </section>
+      <h2>Professional Experience</h2>
+      <ul>
+        <li>Research consultant and data analyst at eRS Information Technology Co., Ltd (2018/07 - present)</li>
+        <li>Teaching Assistant at Renmin University of China, School of Labor and Human Resources (2020/09 - 2022/09)</li>
+      </ul>
 
-      <!-- Professional Experience Section -->
-      <section>
-        <h2>Professional Experience</h2>
-        <p>
-          <b>Renmin University of China</b><br>
-          Ph.D. candidate in Human Resource Management (2019-Present)<br>
-          My primary focus is on the multi-modeling measurement of individual differences.
-        </p>
-        <p>
-          <b>Scott Business School, Indiana State University</b><br>
-          Visiting Scholar (2021-2022)<br>
-          Explored the applications of machine learning and big data in Social Science.
-        </p>
-      </section>
+      <h2>Awards</h2>
+      <ul>
+        <li>China National Study Abroad Scholarship</li>
+        <li>Ph.D. Scholarship from Renmin University of China</li>
+      </ul>
 
-      <!-- Award Section -->
-      <section>
-        <h2>Awards</h2>
-        <p>Here you can write about the awards you have received.</p>
+      <h2>Skills & Certifications</h2>
+      <ul>
+        <li>Common data analysis tools: SPSS, Amos, Python, Stata, MATLAB, R, etc</li>
+        <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
+        <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT) and Teacher Qualification Certificate, etc</li>
+      </ul>
       </section>
-
-      <!-- Skills & Certifications Section -->
-      <section>
-        <h2>Skills & Certifications</h2>
-        <p
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
+</html>
