--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
     <style>
       /* Your style codes... */
+      body {
+        background-image: url('Dream house.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
     </style>
   </head>
   <body>
@@ -26,7 +31,7 @@
           <a href="http://github.com/GuojingLi"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
         </div>
         <br>
-        <img src="李国静-个人照片.jpg" height="400" width="525" alt="Guojing Li">
+        <img src="李国静-个人照片.jpg" height="150" width="112" alt="Guojing Li">
         <p><small>Hosted on GitHub Pages</small></p>
       </header>
       <section>
