--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         background-repeat: no-repeat;
         background-size: cover;
         color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
       }
 
       .header-container {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        height: 100vh;
+        text-align: center;
         padding: 50px;
         background-color: rgba(0, 0, 0, 0.5);
       }
@@ -72,3 +72,17 @@
         <h2>Awards</h2>
         <ul>
           <li>China National Study Abroad Scholarship</li>
+          <li>Ph.D. Scholarship from Renmin University of China</li>
+        </ul>
+
+        <h2>Skills & Certifications</h2>
+        <ul>
+          <li>Common data analysis tools: SPSS, Amos, Python, Stata, MATLAB, R, etc</li>
+          <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
+          <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT) and Teacher Qualification Certificate, etc</li>
+        </ul>
+      </section>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+  </body>
+</html>
