--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background-image: url('Dream house.jpg');
         background-repeat: no-repeat;
         background-size: cover;
-        color: #fff;
+        color: #333;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -26,7 +26,7 @@
       .header-container {
         text-align: center;
         padding: 50px;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(255, 255, 255, 0.7);
       }
 
       .profile-img {
@@ -41,6 +41,7 @@
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
+        text-align: justify;
       }
     </style>
   </head>
@@ -51,37 +52,27 @@
           <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
           <div class="content">
             <h1>Guojing Li 李国静</h1>
-            <p>Hi! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and Labor and Human Resource Management School at Renmin University (Supervisor: Prof. Zhou Wenxia) and Research Laboratory at the Applied Machine Learning Lab. Before that, I graduated with an Application Mathematic Bachelor's degree from Beijing Normal University (Zhuhai Campus) and got an Applied Psychology of Master degree from City University of Macao.</p>
-            <p>Email:<br>alfredjameslee@ruc.edu.cn</p>
-            <b>Social</b><br>
-            <div class="social-row">
-              <a href="mailto:alfredjameslee@ruc.edu.cn" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-              <a href="http://github.com/GuojingLi"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-            </div>
+            <p>Hi! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and Labor and Human Resource Management School at Renmin University (Supervisor: Prof. Zhou Wenxia) and Research Laboratory at the Applied Machine Learning Lab. Before that, I graduated with a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
+            <b>Professional Experience</b><br>
+            <ul>
+              <li>Research consultant and data analyst at eRS Information Technology Co., Ltd (2018/07 - present)</li>
+              <li>Teaching Assistant at Renmin University of China, School of Labor and Human Resources (2020/09 - 2022/09)</li>
+              <li>Indiana State University Scott Business School Visiting Scholar (2022 - present)</li>
+            </ul>
+            <b>Awards</b><br>
+            <ul>
+              <li>China National Study Abroad Scholarship</li>
+              <li>Ph.D. Scholarship from Renmin University of China</li>
+            </ul>
+            <b>Skills & Certifications</b><br>
+            <ul>
+              <li>Common data analysis tools: SPSS, Amos, Python, Stata, MATLAB, R, etc</li>
+              <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
+              <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
+            </ul>
           </div>
         </div>
-        <p><small>Hosted on GitHub Pages</small></p>
       </header>
-      <section>
-        <h2>Professional Experience</h2>
-        <ul>
-          <li>Research consultant and data analyst at eRS Information Technology Co., Ltd (2018/07 - present)</li>
-          <li>Teaching Assistant at Renmin University of China, School of Labor and Human Resources (2020/09 - 2022/09)</li>
-        </ul>
-
-        <h2>Awards</h2>
-        <ul>
-          <li>China National Study Abroad Scholarship</li>
-          <li>Ph.D. Scholarship from Renmin University of China</li>
-        </ul>
-
-        <h2>Skills & Certifications</h2>
-        <ul>
-          <li>Common data analysis tools: SPSS, Amos, Python, Stata, MATLAB, R, etc</li>
-          <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
-          <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT) and Teacher Qualification Certificate, etc</li>
-        </ul>
-      </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
   </body>
