--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
+    <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Guojing Li's Website</title>
@@ -43,6 +43,23 @@
         padding: 20px;
         text-align: justify;
       }
+
+      .contact-info {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+      }
+
+      .contact-info a {
+        display: inline-block;
+        margin-right: 10px;
+      }
+
+      .contact-info a i {
+        font-size: 20px;
+        color: #333;
+      }
     </style>
   </head>
   <body>
@@ -52,24 +69,12 @@
           <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
           <div class="content">
             <h1>Guojing Li 李国静</h1>
-            <p>Hi! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and Labor and Human Resource Management School at Renmin University (Supervisor: Prof. Zhou Wenxia) and Research Laboratory at the Applied Machine Learning Lab. Before that, I graduated with a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
-            <b>Professional Experience</b><br>
-            <ul>
-              <li>Research consultant and data analyst at eRS Information Technology Co., Ltd (2018/07 - present)</li>
-              <li>Teaching Assistant at Renmin University of China, School of Labor and Human Resources (2020/09 - 2022/09)</li>
-              <li>Indiana State University Scott Business School Visiting Scholar (2022 - present)</li>
-            </ul>
-            <b>Awards</b><br>
-            <ul>
-              <li>China National Study Abroad Scholarship</li>
-              <li>Ph.D. Scholarship from Renmin University of China</li>
-            </ul>
-            <b>Skills & Certifications</b><br>
-            <ul>
-              <li>Common data analysis tools: SPSS, Amos, Python, Stata, MATLAB, R, etc</li>
-              <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
-              <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
-            </ul>
+            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the Applied Machine Learning Lab, where I conduct research. Prior to this, I completed my Bachelor's degree in Applied Mathematics at Beijing Normal University (Zhuhai Campus) and my Master's degree in Applied Psychology at City University of Macao.</p>
+            <p>Feel free to connect with me:</p>
+            <div class="contact-info">
+              <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-fw fa-github"></i></a>
+              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-fw fa-envelope"></i></a>
+            </div>
           </div>
         </div>
       </header>
