--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         font-size: 20px;
         color: #333;
       }
+
+      .orcid {
+        font-size: 24px;
+      }
     </style>
   </head>
   <body>
@@ -69,11 +73,12 @@
           <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
           <div class="content">
             <h1>Guojing Li 李国静</h1>
-            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the Applied Machine Learning Lab, where I conduct research. Prior to this, I completed my Bachelor's degree in Applied Mathematics at Beijing Normal University (Zhuhai Campus) and my Master's degree in Applied Psychology at City University of Macao.</p>
+            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the Applied Machine Learning Lab, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
             <p>Feel free to connect with me:</p>
             <div class="contact-info">
               <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-fw fa-github"></i></a>
               <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-fw fa-envelope"></i></a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid">ORCID</a>
             </div>
           </div>
         </div>
