--- a/index.html
+++ b/index.html
@@ -61,10 +61,17 @@
         color: #333;
       }
 
-      .orcid {
+      .contact-info a.orcid {
         font-size: 16px;
         color: #333;
         margin-left: 5px;
+        display: flex;
+        align-items: center;
+      }
+
+      .contact-info a.orcid i {
+        font-size: 16px;
+        margin-right: 5px;
       }
     </style>
   </head>
@@ -75,7 +82,7 @@
           <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
           <div class="content">
             <h1>Guojing Li 李国静</h1>
-            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the Applied Machine Learning Lab, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
+            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the <a href="https://aml-cityu.github.io/">Applied Machine Learning Lab (AML)</a>, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
             <h2>Research Interests</h2>
             <ul>
               <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measure competence, and other multi-behavior and multi-task measurement</li>
@@ -85,7 +92,7 @@
             <div class="contact-info">
               <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-fw fa-github"></i></a>
               <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-fw fa-envelope"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid">ORCID: 0009-0005-2948-2220</a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid"><i class="fa fa-fw fa-envelope"></i> ORCID: 0009-0005-2948-2220</a>
             </div>
             <h2>Professional Experience</h2>
             <ul>
