--- a/index.html
+++ b/index.html
@@ -82,18 +82,12 @@
           <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
           <div class="content">
             <h1>Guojing Li 李国静</h1>
-            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: Prof. Xiangyu Zhao) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the <a href="https://aml-cityu.github.io/">Applied Machine Learning Lab (AML)</a>, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
+            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: <a href="https://zhaoxyai.github.io/">Prof. Xiangyu Zhao</a>) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the <a href="https://aml-cityu.github.io/">Applied Machine Learning Lab (AML)</a>, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
             <h2>Research Interests</h2>
             <ul>
               <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measure competence, and other multi-behavior and multi-task measurement</li>
-              <li>Applications of machine learning and big data in social science</li>
+              <li>Applications of machine learning and big data in Social Science</li>
             </ul>
-            <p>Feel free to connect with me:</p>
-            <div class="contact-info">
-              <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-fw fa-github"></i></a>
-              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-fw fa-envelope"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid"><i class="fa fa-fw fa-envelope"></i> ORCID: 0009-0005-2948-2220</a>
-            </div>
             <h2>Professional Experience</h2>
             <ul>
               <li>Research consultant and data analyst at eRS Information Technology Co., Ltd (2018/07 - present)</li>
@@ -111,10 +105,14 @@
               <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
               <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
             </ul>
+            <div class="contact-info">
+              <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-github"></i></a>
+              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-envelope"></i></a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid"><i class="fa fa-envelope"></i> ORCID: 0009-0005-2948-2220</a>
+            </div>
           </div>
         </div>
       </header>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
   </body>
 </html>
