--- a/index.html
+++ b/index.html
@@ -60,19 +60,6 @@
         font-size: 20px;
         color: #333;
       }
-
-      .contact-info a.orcid {
-        font-size: 16px;
-        color: #333;
-        margin-left: 5px;
-        display: flex;
-        align-items: center;
-      }
-
-      .contact-info a.orcid i {
-        font-size: 16px;
-        margin-right: 5px;
-      }
     </style>
   </head>
   <body>
@@ -108,7 +95,7 @@
             <div class="contact-info">
               <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-github"></i></a>
               <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-envelope"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid"><i class="fa fa-envelope"></i> ORCID: 0009-0005-2948-2220</a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank">ORCID: 0009-0005-2948-2220</a>
             </div>
           </div>
         </div>
