--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="contact-info">
               <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-github"></i></a>
               <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-envelope"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank">ORCID: 0009-0005-2948-2220</a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank">ORCID</a>
             </div>
           </div>
         </div>
