--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         font-size: 20px;
         color: #333;
       }
+
+      .orcid-icon:before {
+        font-family: FontAwesome;
+        content: "\f8b8";
+        margin-right: 5px;
+        color: #333;
+      }
     </style>
   </head>
   <body>
@@ -95,7 +102,7 @@
             <div class="contact-info">
               <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-github"></i></a>
               <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-envelope"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank">ORCID</a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><span class="orcid-icon">ORCID</span></a>
             </div>
           </div>
         </div>
