--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Guojing Li's Website</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+    <link rel="stylesheet" href="assets/css/academicons.min.css"/>
+    <link rel="stylesheet" href="assets/css/academicons.css"/>
 
     <style>
       /* Your style codes... */
@@ -62,8 +56,8 @@
       }
 
       .orcid-icon:before {
-        font-family: FontAwesome;
-        content: "\f8b8";
+        font-family: Academicons;
+        content: "\e93c";
         margin-right: 5px;
         color: #333;
       }
@@ -100,9 +94,9 @@
               <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
             </ul>
             <div class="contact-info">
-              <a href="https://github.com/GuojingLi" target="_blank"><i class="fa fa-github"></i></a>
+              <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fa fa-github"></i></a>
               <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-envelope"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><span class="orcid-icon">ORCID</span></a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid-icon"></a>
             </div>
           </div>
         </div>
