--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="assets/css/academicons.min.css"/>
-    <link rel="stylesheet" href="assets/css/academicons.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.css">
 
     <style>
       /* Your style codes... */
@@ -55,9 +55,8 @@
         color: #333;
       }
 
-      .orcid-icon:before {
-        font-family: Academicons;
-        content: "\e93c";
+      .ai-orcid:before {
+        content: "\f000";
         margin-right: 5px;
         color: #333;
       }
@@ -94,9 +93,9 @@
               <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
             </ul>
             <div class="contact-info">
-              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fa fa-envelope"></i></a>
-              <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fa fa-github"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" class="orcid-icon"></a>
+              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
+              <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-orcid"></i></a>
             </div>
           </div>
         </div>
