--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="contact-info">
               <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
               <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-orcid"></i></a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-fw ai-orcid-square"></i></a>
             </div>
           </div>
         </div>
