--- a/index.html
+++ b/index.html
@@ -24,11 +24,20 @@
       }
 
       .profile-img {
-        width: 200px;
-        height: 200px;
+        width: 150px;
+        height: 150px;
         border-radius: 50%;
         object-fit: cover;
         margin-bottom: 20px;
+      }
+
+      .name-and-icons {
+        display: flex;
+        align-items: center;
+      }
+
+      .contact-info {
+        margin-left: auto;
       }
 
       .content {
@@ -36,13 +45,6 @@
         margin: 0 auto;
         padding: 20px;
         text-align: justify;
-      }
-
-      .contact-info {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 20px;
       }
 
       .contact-info a {
@@ -54,25 +56,26 @@
         font-size: 20px;
         color: #333;
       }
-
-      .ai-orcid:before {
-        content: "\f000";
-        margin-right: 5px;
-        color: #333;
-      }
     </style>
   </head>
   <body>
     <div class="wrapper">
       <header>
         <div class="header-container">
-          <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
-          <div class="content">
+          <div class="name-and-icons">
+            <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
             <h1>Guojing Li 李国静</h1>
+            <div class="contact-info">
+              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
+              <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fab fa-github"></i></a>
+              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-fw ai-orcid-square"></i></a>
+            </div>
+          </div>
+          <div class="content">
             <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: <a href="https://zhaoxyai.github.io/">Prof. Xiangyu Zhao</a>) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the <a href="https://aml-cityu.github.io/">Applied Machine Learning Lab (AML)</a>, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
             <h2>Research Interests</h2>
             <ul>
-              <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measure competence, and other multi-behavior and multi-task measurement</li>
+              <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measure competence, and other multi-behavior and multi-task measurements </li>
               <li>Applications of machine learning and big data in Social Science</li>
             </ul>
             <h2>Professional Experience</h2>
@@ -92,11 +95,6 @@
               <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
               <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
             </ul>
-            <div class="contact-info">
-              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
-              <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-fw ai-orcid-square"></i></a>
-            </div>
           </div>
         </div>
       </header>
