--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       .header-container {
         text-align: center;
-        padding: 50px;
+        padding: 100px 50px 50px;  /* Top padding is now 100px */
         background-color: rgba(255, 255, 255, 0.7);
       }
 
@@ -75,7 +75,7 @@
             <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: <a href="https://zhaoxyai.github.io/">Prof. Xiangyu Zhao</a>) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the <a href="https://aml-cityu.github.io/">Applied Machine Learning Lab (AML)</a>, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
             <h2>Research Interests</h2>
             <ul>
-              <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measure competence, and other multi-behavior and multi-task measurements </li>
+              <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measure competence, and other multi-behavior and multi-task measurement</li>
               <li>Applications of machine learning and big data in Social Science</li>
             </ul>
             <h2>Professional Experience</h2>
