--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       .header-container {
         text-align: center;
-        padding: 100px 50px 50px;  /* Top padding is now 100px */
+        padding: 150px 50px 50px;  /* Top padding is now 150px */
         background-color: rgba(255, 255, 255, 0.7);
       }
 
@@ -29,11 +29,14 @@
         border-radius: 50%;
         object-fit: cover;
         margin-bottom: 20px;
+        margin-top: 19px;  /* Top margin is now 19px */
       }
 
       .name-and-icons {
         display: flex;
         align-items: center;
+        flex-direction: column;
+        margin-top: 19px;  /* Top margin is now 19px */
       }
 
       .contact-info {
@@ -72,6 +75,7 @@
             </div>
           </div>
           <div class="content">
+            <h1>Guojing Li 李国静</h1>
             <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: <a href="https://zhaoxyai.github.io/">Prof. Xiangyu Zhao</a>) and the School of Labor and Human Resource Management at Renmin University (Supervisor: Prof. Zhou Wenxia). I am also affiliated with the <a href="https://aml-cityu.github.io/">Applied Machine Learning Lab (AML)</a>, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
             <h2>Research Interests</h2>
             <ul>
