--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.css">
 
     <style>
-      /* Your style codes... */
       body {
         background-image: url('Dream house.jpg');
         background-repeat: no-repeat;
@@ -19,7 +18,7 @@
 
       .header-container {
         text-align: center;
-        padding: 150px 50px 50px;  /* Top padding is now 150px */
+        padding: 100px 50px 50px;  /* Top padding is now 100px */
         background-color: rgba(255, 255, 255, 0.7);
       }
 
@@ -28,15 +27,14 @@
         height: 150px;
         border-radius: 50%;
         object-fit: cover;
-        margin-bottom: 20px;
-        margin-top: 19px;  /* Top margin is now 19px */
+        margin-bottom: 10px;  /* Bottom margin is now 10px */
       }
 
       .name-and-icons {
         display: flex;
         align-items: center;
         flex-direction: column;
-        margin-top: 19px;  /* Top margin is now 19px */
+        margin-bottom: 10px;  /* Bottom margin is now 10px */
       }
 
       .contact-info {
