--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       .header-container {
         text-align: center;
-        padding: 50px;
+        padding: 80px 50px 50px 50px; /* Increased top padding */
         background-color: rgba(255, 255, 255, 0.7);
         display: flex;
         flex-direction: column;
