--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-bottom: 0.2cm;
+        margin-bottom: 0.7cm;
+        margin-left: -0.5cm;
       }
 
       .profile-img {
-        width: 150px;
-        height: 150px;
+        width: 120px;
+        height: 120px;
         border-radius: 50%;
         object-fit: cover;
         margin-right: 20px;
@@ -71,11 +72,13 @@
         <div class="header-container">
           <div class="profile-section">
             <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
-            <h1>Guojing Li 李国静</h1>
-            <div class="contact-info">
-              <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
-              <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-fw ai-orcid-square"></i></a>
+            <div>
+              <h1>Guojing Li 李国静</h1>
+              <div class="contact-info">
+                <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="https://github.com/AlfredJamesLee" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-fw ai-orcid-square"></i></a>
+              </div>
             </div>
           </div>
           <div class="content">
@@ -85,6 +88,7 @@
               <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measure competence, and other multi-behavior and multi-task measurement</li>
               <li>Applications of machine learning and big data in Social Science</li>
             </ul>
+             </ul>
             <h2>Professional Experience</h2>
             <ul>
               <li>Research consultant and data analyst at eRS Information Technology Co., Ltd (2018/07 - present)</li>
@@ -108,3 +112,5 @@
     </div>
   </body>
 </html>
+
+           
