--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <!-- Remaining Content -->
                 <h2>Professional Experience</h2>
                 <ul>
-                  <li>Data analyst at eRS Information Technology Co., Ltd (2018/07 - 2020/07)</li>
+                  <li>Data Analyst at BoYi Data Technology LTD (2018/07 - 2020/07)</li>
                   <li>Teaching Assistant at Renmin University of China, School of Labor and Human Resources (2020/09 - 2022/09)</li>
                   <li>Indiana State University Scott Business School Visiting Scholar (2022 - present)</li>
                 </ul>
