--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <ul>
                   <li>Common data analysis tools: SPSS, Amos, Python, Stata, MATLAB, R, etc</li>
                   <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
-                  <li>Certificates: AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
+                  <li>Certificates: CDA-LEVEL-II(Certified Data Analyst),AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
                 </ul>
           </div>
         </div>
