Add Google Scholar link to contact info
Added a link to Google Scholar in the contact info section.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://github.com/AlfredJamesLi" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-fw ai-orcid-square"></i></a>
+                <a href="https://scholar.google.com/citations?user=FTI-CrIAAAAJ&hl=en" target="_blank"><i class="fas fa-envelope"></i></a>
               </div>
             </div>
           </div>
