--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <title>Guojing Li | Personal Homepage</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.css">
 
@@ -13,47 +15,70 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        min-height: 100vh;
+        margin: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "PingFang SC", "Microsoft YaHei", sans-serif;
+      }
+
+      .wrapper {
+        width: 100%;
       }
 
       .header-container {
-        text-align: center;
-        padding: 80px 50px 50px 50px; /* Increased top padding */
-        background-color: rgba(255, 255, 255, 0.7);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        max-width: 960px;
+        margin: 40px auto;
+        text-align: left;
+        padding: 40px 40px 50px 40px;
+        background-color: rgba(255, 255, 255, 0.85);
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
       }
 
       .profile-section {
         display: flex;
         align-items: center;
-        justify-content: center;
-        margin-bottom: 0.7cm;
-        margin-left: -0.5cm;
-        padding-top: 5cm; /* Increased top padding */
+        justify-content: flex-start;
+        margin-bottom: 25px;
       }
 
       .profile-img {
-        width: 100px; /* Decreased width */
-        height: 100px; /* Decreased height */
+        width: 110px;
+        height: 110px;
         border-radius: 50%;
         object-fit: cover;
-        margin-right: 50px;
+        margin-right: 30px;
+        border: 2px solid #ddd;
+      }
+
+      h1 {
+        margin: 0 0 8px 0;
+        font-size: 26px;
+      }
+
+      h2 {
+        margin-top: 28px;
+        margin-bottom: 10px;
+        font-size: 20px;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 4px;
       }
 
       .content {
-        max-width: 800px;
+        max-width: 880px;
         margin: 0 auto;
-        padding: 20px;
+        padding-top: 10px;
         text-align: justify;
+        line-height: 1.6;
+        font-size: 14px;
+      }
+
+      .name-and-affiliation {
+        font-size: 14px;
+        color: #555;
       }
 
       .contact-info {
-        display: flex;
-        justify-content: center;
-        margin-left: 20px;
+        margin-top: 6px;
       }
 
       .contact-info a {
@@ -62,11 +87,29 @@
       }
 
       .contact-info a i {
-        font-size: 20px;
+        font-size: 18px;
         color: #333;
+      }
+
+      ul {
+        padding-left: 20px;
+      }
+
+      li {
+        margin-bottom: 4px;
+      }
+
+      a {
+        color: #005a9c;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
       }
     </style>
   </head>
+
   <body>
     <div class="wrapper">
       <header>
@@ -75,41 +118,130 @@
             <img src="李国静-个人照片.jpg" class="profile-img" alt="Guojing Li">
             <div>
               <h1>Guojing Li 李国静</h1>
+              <div class="name-and-affiliation">
+                Joint Ph.D. Student, School of Data Science, City University of Hong Kong &amp;<br>
+                School of Labor and Human Resources, Renmin University of China
+              </div>
               <div class="contact-info">
-                <a href="mailto:alfredjameslee@ruc.edu.cn" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a href="https://github.com/AlfredJamesLi" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://orcid.org/0009-0005-2948-2220" target="_blank"><i class="ai ai-fw ai-orcid-square"></i></a>
-                <a href="https://scholar.google.com/citations?user=FTI-CrIAAAAJ&hl=en" target="_blank"><i class="fas fa-envelope"></i></a>
+                <!-- Emails -->
+                <a href="mailto:guojingli3-c@my.cityu.edu.hk" title="CityU Email">
+                  <i class="fas fa-envelope"></i>
+                </a>
+                <a href="mailto:alfredjameslee@ruc.edu.cn" title="RUC Email">
+                  <i class="far fa-envelope"></i>
+                </a>
+                <!-- GitHub -->
+                <a href="https://github.com/AlfredJamesLi" target="_blank" title="GitHub">
+                  <i class="fab fa-github"></i>
+                </a>
+                <!-- ORCID -->
+                <a href="https://orcid.org/0009-0005-2948-2220" target="_blank" title="ORCID">
+                  <i class="ai ai-orcid-square ai-fw"></i>
+                </a>
+                <!-- Google Scholar -->
+                <a href="https://scholar.google.com/citations?user=FTI-CrIAAAAJ&amp;hl=en" target="_blank" title="Google Scholar">
+                  <i class="ai ai-google-scholar-square ai-fw"></i>
+                </a>
               </div>
             </div>
           </div>
+
           <div class="content">
-            <p>Hi there! I am currently a Joint-PhD student of Data Science at CityU (Supervisor: <a href="https://zhaoxyai.github.io/">Professor Xiangyu Zhao</a>) and the School of Labor and Human Resource Management at Renmin University (Supervisor: <a href="http://slhr.ruc.edu.cn/En/Teacher_Home/ZHOU_Wenxia/index.htm"> Professor Zhou Wenxia(Distinguished professor)</a>). I am also affiliated with the <a href="https://aml-cityu.github.io/">Applied Machine Learning Lab (AML)</a>, where I conduct research. Before pursuing my Ph.D., I earned a Bachelor's degree in Applied Mathematics from Beijing Normal University (Zhuhai Campus) and a Master's degree in Applied Psychology from City University of Macao.</p>
+            <p>
+              Hi there! I am currently a joint Ph.D. student in Data Science at the 
+              School of Data Science, City University of Hong Kong (Supervisor: 
+              <a href="https://zhaoxyai.github.io/" target="_blank">Professor Xiangyu Zhao</a>), 
+              and in Human Resource Management at the School of Labor and Human Resources, 
+              Renmin University of China (Supervisor: 
+              <a href="http://slhr.ruc.edu.cn/En/Teacher_Home/ZHOU_Wenxia/index.htm" target="_blank">
+              Professor Wenxia Zhou</a>, Distinguished Professor and Second-rank Professor—
+              the highest academic title in humanities and social sciences in mainland China).
+              I am also affiliated with the 
+              <a href="https://aml-cityu.github.io/" target="_blank">Applied Machine Learning Lab (AML)</a> at CityU.
+              Before pursuing my Ph.D., I obtained a B.Sc. in Applied Mathematics from Beijing Normal University 
+              (Zhuhai Campus) and an M.A. in Applied Psychology from City University of Macao.
+            </p>
+
             <h2>Research Interests</h2>
             <ul>
-              <li>Multi-modeling measurement of individual differences, such as personality measurement by social media, AI chat measures competence, and other multi-behavior and multi-task measurement</li>
-              <li>Applications of machine learning and big data in Social Science</li>
+              <li>NLP, large language models (LLMs), and text mining for labor-market and career research.</li>
+              <li>Content analysis and computational measurement of career readiness competencies, career adaptability, and employment-related competencies.</li>
+              <li>Multi-modal and multi-behavior measurement of individual differences (e.g., personality) using social media, AI chat logs, and survey/behavioral data.</li>
+              <li>Applications of machine learning and big data in social science.</li>
             </ul>
-            <!-- Remaining Content -->
-                <h2>Professional Experience</h2>
-                <ul>
-                  <li>Data Analyst at  <a href="https://www.boyidata.cn/#">BoYi Data Technology LTD </a>(2018/07 - 2020/07)</li>
-                  <li>Teaching Assistant at Renmin University of China, School of Labor and Human Resources (2020/09 - 2022/09)</li>
-                  <li>Indiana State University Scott Business School Visiting Scholar (2022 - present)</li>
-                </ul>
-                
-                <h2>Awards</h2>
-                <ul>
-                  <li>China National Study Abroad Scholarship</li>
-                  <li>Ph.D. Scholarship from Renmin University of China</li>
-                </ul>
-                
-                <h2>Skills & Certifications</h2>
-                <ul>
-                  <li>Common data analysis tools: SPSS, Amos, Python, Stata, MATLAB, R, etc</li>
-                  <li>Languages: Mandarin, Cantonese (native), English (fluent)</li>
-                  <li>Certificates: CDA-LEVEL-II(Certified Data Analyst),AI Engineer (Microsoft MTA certificate), Data Management Specialist (Microsoft MTA certificate), Data Analyst (MTA), Python Technical Developer (Advanced), Senior Software Engineer, Big Data Analyst (China MIIT), and Teacher Qualification Certificate</li>
-                </ul>
+
+            <h2>Education</h2>
+            <ul>
+              <li><strong>Ph.D. in Data Science</strong>, City University of Hong Kong, 2024&nbsp;– present</li>
+              <li><strong>Ph.D. in Human Resource Management</strong>, Renmin University of China, 2020&nbsp;– present</li>
+              <li><strong>M.A. in Applied Psychology</strong>, City University of Macao, 2013&nbsp;– 2016</li>
+              <li><strong>B.Sc. in Applied Mathematics</strong>, Beijing Normal University (Zhuhai Campus), 2009&nbsp;– 2013</li>
+            </ul>
+
+            <h2>Selected Publications</h2>
+            <ul>
+              <li>
+                Han, Z., Cheng, Y., Ren, Z., Wang, D., <strong>Li, G.</strong> (2024). 
+                Meta-analysis of work connectivity behavior and work–life conflict: 
+                From the perspective of the work–family resource model. 
+                <em>Advances in Psychological Science</em>.
+              </li>
+              <li>
+                Fu, Z., Wu, X., <strong>Li, G.</strong>, Zhang, Y., Zheng, Y., Ming, T., Wang, Y., Wang, W., Zhao, X. (2025). 
+                Model Merging for Knowledge Editing. 
+                <em>ACL 2025 Industry Track</em> (Oral).
+              </li>
+              <li>
+                Zhou, W., Pan, Z., <strong>Li, G.</strong>, et al. (2023). 
+                Handbook of Career Research, Teaching and Counseling Tools.
+              </li>
+              <li>
+                Zhao, Y., Cao, W., Yuan, Z., Rong, X., <strong>Li, G.</strong> (2018). 
+                Research on the differences between brand image presentation and positioning of news media: 
+                Taking Huawei and Xiaomi as examples. 
+                Annual Conference of Chinese Society of Journalism and History.
+              </li>
+            </ul>
+
+            <h2>Working Papers &amp; Current Projects</h2>
+            <ul>
+              <li><em>Chinese-SkillSpan: A Span-Level Dataset for ESCO-Aligned Competency Extraction from Chinese Job Ads</em></li>
+              <li><em>Hallucination-Free Job Skill Extraction via LLM-Centric Multi-Module Framework</em></li>
+              <li><em>LLM for Job Recommendation</em></li>
+              <li><em>Core Competencies Related to Chinese College Students' Employment: A Bibliometric and Content Analysis of Chinese Literature (1979–2025)</em></li>
+            </ul>
+
+            <h2>Professional Experience</h2>
+            <ul>
+              <li>
+                <strong>Teaching Assistant</strong>, School of Labor and Human Resources, Renmin University of China, 2020/09&nbsp;– present<br>
+                Involved in multiple research and consulting projects on vocational skill improvement, freelance labor, 
+                civil service management systems, and AI-era career success mechanisms; responsible mainly for data analysis and reporting.
+              </li>
+              <li>
+                <strong>Visiting Scholar</strong>, Scott College of Business, Indiana State University, 2022/09&nbsp;– 2024/04
+              </li>
+              <li>
+                <strong>Research Consultant &amp; Data Analyst Engineer</strong>, eRS Information Technology Limited, 2018/07&nbsp;– present<br>
+                Participated in text mining projects (text classification, sentiment analysis, topic modeling, word relation modeling, 
+                named entity recognition, and AI-based telephone number recognition models) and deployed models to online production.
+              </li>
+            </ul>
+
+            <h2>Awards &amp; Scholarships</h2>
+            <ul>
+              <li>China Scholarship Council (CSC) National Study Abroad Scholarship</li>
+              <li>Ph.D. Scholarship (C-Class) for Doctoral Students, Renmin University of China</li>
+            </ul>
+
+            <h2>Skills &amp; Certifications</h2>
+            <ul>
+              <li><strong>Data &amp; Programming:</strong> SPSS, Amos, SAS, MATLAB, R, Java, Python, text mining and machine learning toolkits.</li>
+              <li><strong>Professional Certifications:</strong> AI Engineer (Microsoft MTA), Data Management Specialist (Microsoft MTA), Data Analyst, etc.</li>
+              <li><strong>Languages:</strong> Mandarin &amp; Cantonese (native), English (IELTS 6.5, CET-6).</li>
+              <li><strong>Others:</strong> Teacher Qualification Certificate; participation in multiple workshops on psychosomatic medicine, 
+                  psychotherapy, and big data applications.</li>
+            </ul>
           </div>
         </div>
       </header>
