Expand research interests and project details in index.html
Added detailed descriptions of research interests, working papers, and awards.

--- a/index.html
+++ b/index.html
@@ -164,10 +164,24 @@
 
             <h2>Research Interests</h2>
             <ul>
-              <li>NLP, large language models (LLMs), and text mining for labor-market and career research.</li>
-              <li>Content analysis and computational measurement of career readiness competencies, career adaptability, and employment-related competencies.</li>
-              <li>Multi-modal and multi-behavior measurement of individual differences (e.g., personality) using social media, AI chat logs, and survey/behavioral data.</li>
-              <li>Applications of machine learning and big data in social science.</li>
+              <li>
+                Structural equation modeling (SEM) of employment-related competencies, career success and AI-era outcomes 
+                among university students (mainly undergraduates) and research-track master/PhD students, 
+                based on demographic and survey data (N≈400–600) as baseline models.
+              </li>
+              <li>
+                Machine-learning and NLP-based text mining of recruitment texts and open-ended questionnaire responses 
+                to extract competence elements, build predictive models (classification and regression), 
+                and design human-like data augmentation pipelines.
+              </li>
+              <li>
+                Career and job recommendation systems: leveraging survey, behavioral and labor-market data to 
+                fine-tune models and develop career recommendation / counseling agents for students.
+              </li>
+              <li>
+                More broadly, NLP, large language models (LLMs) and big-data methods for labor-market analytics 
+                and social science research.
+              </li>
             </ul>
 
             <h2>Education</h2>
@@ -205,10 +219,21 @@
 
             <h2>Working Papers &amp; Current Projects</h2>
             <ul>
-              <li><em>Chinese-SkillSpan: A Span-Level Dataset for ESCO-Aligned Competency Extraction from Chinese Job Ads</em></li>
-              <li><em>Hallucination-Free Job Skill Extraction via LLM-Centric Multi-Module Framework</em></li>
-              <li><em>LLM for Job Recommendation</em></li>
-              <li><em>Core Competencies Related to Chinese College Students' Employment: A Bibliometric and Content Analysis of Chinese Literature (1979–2025)</em></li>
+              <li>
+                <em>Chinese-SkillSpan: A Span-Level Dataset for ESCO-Aligned Competency Extraction from Chinese Job Ads</em>
+              </li>
+              <li>
+                <em>Hallucination-Free Job Skill Extraction via LLM-Centric Multi-Module Framework</em>
+              </li>
+              <li>
+                <em>LLM for Job Recommendation</em>
+              </li>
+              <li>
+                <em>Core Competencies Related to Chinese College Students' Employment: 
+                A Bibliometric and Content Analysis of Chinese Literature (1979–2025)</em> — 
+                Excellent Paper Award at the “Algorithmic Management and Human–Machine Integration Forum”; 
+                manuscript currently under journal submission.
+              </li>
             </ul>
 
             <h2>Professional Experience</h2>
@@ -230,8 +255,13 @@
 
             <h2>Awards &amp; Scholarships</h2>
             <ul>
-              <li>China Scholarship Council (CSC) National Study Abroad Scholarship</li>
-              <li>Ph.D. Scholarship (C-Class) for Doctoral Students, Renmin University of China</li>
+              <li>
+                Excellent Paper Award, “Algorithmic Management and Human–Machine Integration Forum”, 
+                for the paper <em>Core Competencies Related to Chinese College Students' Employment: 
+                A Bibliometric and Content Analysis of Chinese Literature (1979–2025)</em>.
+              </li>
+              <li>China Scholarship Council (CSC) National Study Abroad Scholarship.</li>
+              <li>Ph.D. Scholarship (C-Class) for Doctoral Students, Renmin University of China.</li>
             </ul>
 
             <h2>Skills &amp; Certifications</h2>
